--- a/all.css
+++ b/all.css
@@ -17,8 +17,8 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     background: #eaeceb;
-    width: 300px;
-    height: 500px;
+    width: 350px;
+    height: 520px;
     border-radius: 5px;
 }
 
@@ -34,7 +34,7 @@ padding-top: 60px;
 }
 
 .login form{
-    padding: 0 40px;
+    padding: 0 35px;
     box-sizing: border-box;
 }
 
@@ -79,6 +79,15 @@ input[type="submit"]{
     cursor: pointer;
 }
 
+.signup_link{
+    margin: 20px 0;
+    font-size: 16px;
+    
+}
 
-
-
+.signup_link a{
+    float: right;
+    font-weight: 700;
+    color: black;
+    text-decoration: none;
+}
